// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack Trace does not print a stack trace for errors when --noStackTrace is given 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       3 failed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /testError.test.js/i."
`;

exports[`Stack Trace does not print a stack trace for matching errors when --noStackTrace is given 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /stackTrace.test.js/i."
`;

exports[`Stack Trace does not print a stack trace for runtime errors when --noStackTrace is given 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /runtimeError.test.js/i."
`;

exports[`Stack Trace prints a stack trace for errors 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       3 failed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /testError.test.js/i."
`;

exports[`Stack Trace prints a stack trace for errors without message in stack trace 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /stackTraceWithoutMessage.test.js/i."
`;

exports[`Stack Trace prints a stack trace for matching errors 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /stackTrace.test.js/i."
`;

exports[`Stack Trace prints a stack trace for runtime errors 1`] = `
"Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /runtimeError.test.js/i."
`;
